--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta content="IE=7.0000" http-equiv="X-UA-Compatible">
-<title>Xiang Wang's Homepage</title>
-<meta name="description" content="Xiang Wang, Research Fellow in National University of Singapore. Recommender systems, information retrieval, applied machine learning.">
-<meta name="keywords" content="xiang wang, nus, National University of Singapore, recommender systems, personalized recommendation, information retrieval, deep learning, machine learning, internet advertising">
+<title>Yongqi Li's Homepage</title>
+<meta name="description" content="Yongqi Li, Research Fellow in National University of Singapore. Recommender systems, information retrieval, applied machine learning.">
+<meta name="keywords" content="Yongqi Li, nus, National University of Singapore, recommender systems, personalized recommendation, information retrieval, deep learning, machine learning, internet advertising">
 
 <link rel="stylesheet" type="text/css" href="./files/xiangwang.css">
 <!-- <script type="text/javascript" async="" src="./files/ga.js"></script><script type="text/javascript">
@@ -67,7 +67,7 @@
 
 <td valign="CENTER" halign="LEFT">
 <font size="+0">
-<b><font size="+2">Xiang WANG&nbsp;</font></b>
+<b><font size="+2">Yongqi Li&nbsp;</font></b>
 <p style="margin-left:0px;">
 <img src="./images/name.png", height="60">
 </p><p style="margin-left:0px;">
@@ -88,7 +88,7 @@ Email: xiangwang AT u.nus.edu</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-    Xiang Wang is now a research fellow in <a href="http://www.nextcenter.org/">NExT++</a>, School of Computing, National University of Singapore.
+    Yongqi Li is now a research fellow in <a href="http://www.nextcenter.org/">NExT++</a>, School of Computing, National University of Singapore.
     His research interests include information retrieval, data mining, and explainable AI, particularly in recommender systems, graph learning, and social media analysis.
     Moreover, he has served as the PC member for top-tier conferences including SIGIR and MM, and the invited reviewer for prestigious journals including TKDE, TOIS, TKDD, and TIST.
     
@@ -149,7 +149,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/1905.07854" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">KGAT: Knowledge Graph Attention Network for Recommendation</span> 
-      <br><b>Xiang Wang</b>, Xiangnan He, Yixin Cao, Meng Liu & Tat-Seng Chua
+      <br><b>Yongqi Li</b>, Xiangnan He, Yixin Cao, Meng Liu & Tat-Seng Chua
     <br>KDD 2019 (Full, Accept rate: 14.2%)
     <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/knowledge_graph_attention_network" target="_blank">Codes</a> &nbsp;&nbsp;
                     &bull; Slides &nbsp;&nbsp;
@@ -163,7 +163,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/1905.08108" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Neural Graph Collaborative Filtering</span> 
-      <br><b>Xiang Wang</b>, Xiangnan He, Meng Wang, Fuli Feng & Tat-Seng Chua
+      <br><b>Yongqi Li</b>, Xiangnan He, Meng Wang, Fuli Feng & Tat-Seng Chua
     <br>SIGIR 2019 (Full, Accept rate: 20%)
     <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/neural_graph_collaborative_filtering" target="_blank">Codes</a> &nbsp;&nbsp;
                     &bull; Slides &nbsp;&nbsp;
@@ -177,7 +177,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/1811.04540" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Explainable Reasoning over Knowledge Graph Paths for Recommendation</span> 
-      <br><b>Xiang Wang</b>, Dingxian Wang, Canran Xu, Xiangnan He, Yixin Cao & Tat-Seng Chua
+      <br><b>Yongqi Li</b>, Dingxian Wang, Canran Xu, Xiangnan He, Yixin Cao & Tat-Seng Chua
     <br>AAAI 2019 (Full, Accept rate: 16.2%)
     <br>&nbsp;&nbsp;&bull; <a href="https://github.com/eBay/KPRN" target="_blank">Codes</a> &nbsp;&nbsp;
                     &bull; Slides &nbsp;&nbsp;
@@ -194,7 +194,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://dl.acm.org/citation.cfm?id=3178876.3186066" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">TEM: Tree-enhanced Embedding Model for Explainable Recommendation</span> 
-      <br><b>Xiang Wang</b>, Xiangnan He, Fuli Feng, Liqiang Nie & Tat-Seng Chua
+      <br><b>Yongqi Li</b>, Xiangnan He, Fuli Feng, Liqiang Nie & Tat-Seng Chua
     <br>WWW 2018 (Accept rate: 14.8%)
     <br>&nbsp;&nbsp;&bull; <a href="https://github.com/eBay/KPRN" target="_blank">Codes</a> &nbsp;&nbsp;
                     &bull; <a href="https://github.com/eBay/KPRN" target="_blank">Slides</a> &nbsp;&nbsp;
@@ -211,7 +211,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://dl.acm.org/citation.cfm?id=3080771" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Item Silk Road: Recommending Items from Information Domains to Social Users</span>
-      <br><b>Xiang Wang</b>, Xiangnan He, Liqiang Nie & Tat-Seng Chua 
+      <br><b>Yongqi Li</b>, Xiangnan He, Liqiang Nie & Tat-Seng Chua 
     <br>SIGIR 2017 (Accept rate: 22%)
     <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/NSCR" target="_blank">Codes</a>  &nbsp;&nbsp;
                     &bull; <a href="./papers/sigir17-SilkRoad-slides.pdf" target="_blank">Slides</a>  &nbsp;&nbsp;
@@ -225,7 +225,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://dl.acm.org/citation.cfm?id=3052774" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Unifying Virtual and Physical Worlds: Learning towards Local and Global Consistency</span> 
-      <br><b>Xiang Wang</b>, Liqiang Nie, Xuemeng Song, Dongxiang Zhang & Tat-Seng Chua
+      <br><b>Yongqi Li</b>, Liqiang Nie, Xuemeng Song, Dongxiang Zhang & Tat-Seng Chua
     <br>ACM Transactions on Information Systems (TOIS)
     <br>&nbsp;&nbsp;&bull; <a href="http://apprec.wixsite.com/star" target="_blank">Codes</a> &nbsp;&nbsp;
                     &bull; <a href="./slides/tois17-app-recsys.pdf" target="_blank">Slides</a>&nbsp;&nbsp;
