--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Yongqi Li, Research Fellow in National University of Singapore. Recommender systems, information retrieval, applied machine learning.">
 <meta name="keywords" content="Yongqi Li, nus, National University of Singapore, recommender systems, personalized recommendation, information retrieval, deep learning, machine learning, internet advertising">
 
-<link rel="stylesheet" type="text/css" href="./files/xiangwang.css">
+<link rel="stylesheet" type="text/css" href="./files/liyongqi.css">
 <!-- <script type="text/javascript" async="" src="./files/ga.js"></script><script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -69,7 +69,6 @@
 <font size="+0">
 <b><font size="+2">Yongqi Li&nbsp;</font></b>
 <p style="margin-left:0px;">
-<img src="./images/name.png", height="60">
 </p><p style="margin-left:0px;">
 <b>Research Fellow</b>
 </p><p style="margin-left:0px;">
