--- a/index.html
+++ b/index.html
@@ -64,22 +64,20 @@
 
 <td valign="CENTER" width="2%">
 </td>
-
 <td valign="CENTER" halign="LEFT">
 <font size="+0">
 <b><font size="+2">Yongqi Li&nbsp;</font></b>
 <p style="margin-left:0px;">
 </p><p style="margin-left:0px;">
-<b>Research Fellow</b>
+<b>Research Assistant</b>
 </p><p style="margin-left:0px;">
-<a href="http://www.nextcenter.org/", target="_blank">NExT++</a><br/>
-<a href="https://www.comp.nus.edu.sg/", target="_blank">School of Computing</a><br/>
-<a href="http://www.nus.edu.sg", target="_blank">National University of Singapore</a><br/>
+<a href="https://www.comp.nus.edu.sg/", target="_blank">Computer science and technology</a><br/>
+<a href="http://www.nus.edu.sg", target="_blank">Shandong University</a><br/>
 </p><p style="margin-left:0px;">
-Computing 1, Computing Drive, Singapore 117417<br>
+Qingdao, Shandong, China<br>
 </p><p style="margin-left:0px;">
-Email: xiangwang AT u.nus.edu</a><br>
-&bull; <a href="files/xiangwang_cv.pdf">CV</a> &bull; <a href="https://scholar.google.com.sg/citations?user=HdhaQB0AAAAJ&hl=en">Google Scholar</a> &bull; <a href="https://github.com/xiangwang1223">GitHub</a> <br>
+liyongqi0@gmail.com</a><br>
+&bull; <a href="files/CV_liyongqi.pdf">CV</a> &bull; <a href="https://github.com/liyongqi67">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
 </p></font><p><font size="+0">
 </font>
 </p></td>
@@ -87,9 +85,10 @@ Email: xiangwang AT u.nus.edu</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-    Yongqi Li is now a research fellow in <a href="http://www.nextcenter.org/">NExT++</a>, School of Computing, National University of Singapore.
-    His research interests include information retrieval, data mining, and explainable AI, particularly in recommender systems, graph learning, and social media analysis.
-    Moreover, he has served as the PC member for top-tier conferences including SIGIR and MM, and the invited reviewer for prestigious journals including TKDE, TOIS, TKDD, and TIST.
+Yongqi Li is an undergraduate student in the
+School of Computer Science and Technology,
+Shandong University. His research interests
+include information retrieval and data mining.
     
 </div>
 
@@ -157,81 +156,10 @@ Multi-modal Data Analysis" </font> </br>
  </tbody>
 </table>
 
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/1905.08108" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Neural Graph Collaborative Filtering</span> 
-      <br><b>Yongqi Li</b>, Xiangnan He, Meng Wang, Fuli Feng & Tat-Seng Chua
-    <br>SIGIR 2019 (Full, Accept rate: 20%)
-    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/neural_graph_collaborative_filtering" target="_blank">Codes</a> &nbsp;&nbsp;
-                    &bull; Slides &nbsp;&nbsp;
-  </td>
-  </tr>
- </tbody>
-</table>
 
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/1811.04540" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Explainable Reasoning over Knowledge Graph Paths for Recommendation</span> 
-      <br><b>Yongqi Li</b>, Dingxian Wang, Canran Xu, Xiangnan He, Yixin Cao & Tat-Seng Chua
-    <br>AAAI 2019 (Full, Accept rate: 16.2%)
-    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/eBay/KPRN" target="_blank">Codes</a> &nbsp;&nbsp;
-                    &bull; Slides &nbsp;&nbsp;
-  </td>
-  </tr>
- </tbody>
 </table>
 
 
-<b> In the Year of 2018: </b> </br></br>
-
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://dl.acm.org/citation.cfm?id=3178876.3186066" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">TEM: Tree-enhanced Embedding Model for Explainable Recommendation</span> 
-      <br><b>Yongqi Li</b>, Xiangnan He, Fuli Feng, Liqiang Nie & Tat-Seng Chua
-    <br>WWW 2018 (Accept rate: 14.8%)
-    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/eBay/KPRN" target="_blank">Codes</a> &nbsp;&nbsp;
-                    &bull; <a href="https://github.com/eBay/KPRN" target="_blank">Slides</a> &nbsp;&nbsp;
-  </td>
-  </tr>
- </tbody>
-</table>
-
-
-<b> In the Year of 2017: </b> </br></br>
-
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://dl.acm.org/citation.cfm?id=3080771" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Item Silk Road: Recommending Items from Information Domains to Social Users</span>
-      <br><b>Yongqi Li</b>, Xiangnan He, Liqiang Nie & Tat-Seng Chua 
-    <br>SIGIR 2017 (Accept rate: 22%)
-    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/NSCR" target="_blank">Codes</a>  &nbsp;&nbsp;
-                    &bull; <a href="./papers/sigir17-SilkRoad-slides.pdf" target="_blank">Slides</a>  &nbsp;&nbsp;
-  </td>
-  </tr>
- </tbody>
-</table>
-
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://dl.acm.org/citation.cfm?id=3052774" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Unifying Virtual and Physical Worlds: Learning towards Local and Global Consistency</span> 
-      <br><b>Yongqi Li</b>, Liqiang Nie, Xuemeng Song, Dongxiang Zhang & Tat-Seng Chua
-    <br>ACM Transactions on Information Systems (TOIS)
-    <br>&nbsp;&nbsp;&bull; <a href="http://apprec.wixsite.com/star" target="_blank">Codes</a> &nbsp;&nbsp;
-                    &bull; <a href="./slides/tois17-app-recsys.pdf" target="_blank">Slides</a>&nbsp;&nbsp;
-  </td>
-  </tr>
- </tbody>
-</table>
 
 <b> Look for the full publication list? Please see <a href="files/xiangwang_cv.pdf" target="_blank">my CV</a> or visit <a href="https://scholar.google.com.sg/citations?user=HdhaQB0AAAAJ&hl=en" target="_blank">Google Scholar</a>.</b></br></br>
 
@@ -257,25 +185,7 @@ Multi-modal Data Analysis" </font> </br>
   <br> - School of Computing, National University of Singapore
 </td></tr></tbody></table>
 
-<table><tbody><tr><td>
-  <span class="title">Research Achievement Award, &nbsp;&nbsp;June 2017</span> &nbsp;&nbsp; 
-  <br> - School of Computing, National University of Singapore
-</td></tr></tbody></table>
 
-<table><tbody><tr><td>
-  <span class="title">Full Research Scholarship, &nbsp;&nbsp;2014-2019</span> &nbsp;&nbsp; 
-  <br> - National University of Singapore
-</td></tr></tbody></table>
-
-<table><tbody><tr><td>
-  <span class="title">Excellent Graduates, &nbsp;&nbsp;May 2014</span> &nbsp;&nbsp; 
-  <br> - Beihang University, China
-</td></tr></tbody></table>
-
-<table><tbody><tr><td>
-  <span class="title">National Scholarship (top scholarship for Chinese undergraduates), &nbsp;&nbsp;December 2013</span> &nbsp;&nbsp; 
-  <br> - Beihang University, China
-</td></tr></tbody></table>
 
 
 
@@ -286,17 +196,6 @@ Multi-modal Data Analysis" </font> </br>
   <br> - Shandong University, Augest 11, 2018 (invited by Prof. Nie Liqiang)
 </td></tr></tbody></table>
 
-<table><tbody><tr><td>
-  <span class="title">TEM: Tree-enhanced Embedding Model for Explainable Recommendation</span> &nbsp;&nbsp; 
-  <br> - 6estate Company, Singapore, October 11, 2018 (invited by Dr. Luan Huanbo & Dr. Wang Chao)
-  <br> - WWW 2018, Lyon, France, April 26, 2018
-</td></tr></tbody></table>
-
-<table><tbody><tr><td>
-  <span class="title">Item Silk Road: Recommending Items from Information Domains to Social Users</span> &nbsp;&nbsp; 
-  <br> - Shandong University, May 20, 2017 (invited by Prof. Nie Liqiang)
-  <br> - SIGIR 2017, Tokyo, Japan, August 5, 2017
-</td></tr></tbody></table>
 
 
 
@@ -304,17 +203,7 @@ Multi-modal Data Analysis" </font> </br>
 <table><tbody><tr><td>
 <!-- 	Local Chair of <span class="title">CCIS 2019</span> (IEEE International Conference on Cloud Computing and Intelligence Systems) <br> -->
   Program Committee Member of <span class="title">ACM SIGIR (2019) </span> <br>
-  Program Committee Member of <span class="title">ACM MM (2019) </span> <br>
-  Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE) </span> <br>
-	Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS) </span> <br>
-  Invited Reviewer for <span class="title">ACM Transactions on Intelligent Systems and Technology (TIST) </span> <br>
-  Invited Reviewer for <span class="title">ACM Transactions on Knowledge Discovery from Data (TKDD) </span> <br>
-  Invited Reviewer for <span class="title">Information Sciences </span> <br>
-  Invited Reviewer for <span class="title">Neurocomputing</span> <br>
-  Invited Reviewer for <span class="title">Frontiers of Computer Science </span> <br>
-  Invited Reviewer for <span class="title">World Wide Web Journal (WWWJ) </span> <br>
-  Invited Reviewer for <span class="title">Multimedia Systems Journal (MMSJ) </span> <br>
-  External Reviewer of <span class="title">SIGIR 2016-2018, WWW 2017-2019. </span> <br>
+
 </td></tr></tbody></table>
 
 
