--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta content="IE=7.0000" http-equiv="X-UA-Compatible">
 <title>Yongqi Li's Homepage</title>
-<meta name="description" content="Yongqi Li, Research Fellow in National University of Singapore. Recommender systems, information retrieval, applied machine learning.">
-<meta name="keywords" content="Yongqi Li, nus, National University of Singapore, recommender systems, personalized recommendation, information retrieval, deep learning, machine learning, internet advertising">
+<meta name="description" content="Yongqi Li.">
+<meta name="keywords" content="Yongqi Li">
 
 <link rel="stylesheet" type="text/css" href="./files/liyongqi.css">
 <!-- <script type="text/javascript" async="" src="./files/ga.js"></script><script type="text/javascript">
@@ -31,23 +31,10 @@
     <h2>News</h2><br>
     <font size="3px">
 
-    <b>29 April 2019</b><br>
+    <b>1 July 2019</b><br>
     <span class="easylink">
-    One full paper is accepted by <a href="https://www.kdd.org/kdd2019/" target="_blank">KDD 2019</a>, about <b>graph neural network for knowledge-aware recommendation</b>. 
-    </span><br><br>
-
-    <b>14 April 2019</b><br>
-    <span class="easylink">
-    One full paper is accepted by <a href="https://sigir.org/sigir2019/" target="_blank">SIGIR 2019</a>, about <b>graph neural network for recommendation</b>. 
-    </span><br><br>
-
-<!--     <b>27 February 2019</b><br>
-    <span class="easylink">I am invited to be a local chair of the <a href="http://ccis2018.csp.escience.cn/" target="_blank">CCIS 2019</a> conference, to be held in Singapore on Sep 25-27. 
-    </span><br><br> -->
-
-    <b>24 January 2019</b><br>
-    <span class="easylink">
-    I have successfully defended my thesis and got the PhD degree! My thesis title is "<a href="./papers/thesis.pdf" target="_blank">Exploiting Cross-Channel Information for Personalized Recommendation</a>".
+    One full paper is accepted by <a href="https://www.kdd.org/kdd2019/" target="_blank">ACM MM 2019</a>, about <b>Routing Micro-videos via A Temporal Graph-guided
+Recommendation System</b>. 
     </span><br><br>
 
 
@@ -59,22 +46,20 @@
 <table style="background-color:white;">
 <tbody><tr nosave="">
 <td valign="CENTER">
-<img src="./images/profile.png" height="250" align="left">
+<img src="./images/profile.png" height="220" align="left">
 </td>
 
-<td valign="CENTER" width="2%">
-</td>
-<td valign="CENTER" halign="LEFT">
+<td valign="CENTER" align="left">
 <font size="+0">
 <b><font size="+2">Yongqi Li&nbsp;</font></b>
 <p style="margin-left:0px;">
 </p><p style="margin-left:0px;">
 <b>Research Assistant</b>
 </p><p style="margin-left:0px;">
-<a href="https://www.comp.nus.edu.sg/", target="_blank">Computer science and technology</a><br/>
-<a href="http://www.nus.edu.sg", target="_blank">Shandong University</a><br/>
+<a href="http://www.cs.sdu.edu.cn/", target="_blank">Computer science and technology</a><br/>
+<a href="http://www.sdu.edu.cn/", target="_blank">Shandong University</a><br/>
 </p><p style="margin-left:0px;">
-Qingdao, Shandong, China<br>
+72 Binhai Ave, Qingdao, Shandong, China 266237<br>
 </p><p style="margin-left:0px;">
 liyongqi0@gmail.com</a><br>
 &bull; <a href="files/CV_liyongqi.pdf">CV</a> &bull; <a href="https://github.com/liyongqi67">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
@@ -103,41 +88,29 @@ Multi-modal Data Analysis" </font> </br>
 
 
 <h2 style="CLEAR: both;">Education</h2>
+
 <table>
   <tbody>
   <tr>
-    <td><span class="title">National University of Singapore (NUS)</span> <br>
-	Ph.D. in Computer Science &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  July 2014 - February 2019, Singapore <br>
-	Advisor: <a href="https://www.chuatatseng.com/" target="_blank">Prof. Chua Tat-Seng</a><br>
-	Mentors: <a href="https://www.comp.nus.edu.sg/~xiangnan/" target="_blank">Dr. He Xiangnan</a> and <a href="http://ir.sdu.edu.cn/~liqiangnie/index.html" target="_blank">Dr. Nie Liqiang</a>
-     </td></tr></tbody></table>
-<table>
-  <tbody>
-  <tr>
-    <td><span class="title">Beihang University (BUAA)</span> <br>
-	Bachelor in Computer Science and Engineering &nbsp;&nbsp;&nbsp;&nbsp;  Sep 2010 - June 2014, Beijing <br>
-	Advisor: <a href="https://dblp.org/pers/hd/l/Li:Zhoujun" target="_blank">Prof. Li Zhoujun</a>
+    <td><span class="title">Shandong University </span> <br>
+	Bachelor in Computer Science and Technology &nbsp;&nbsp;&nbsp;&nbsp;  Sep 2015 - June 2019 <br>
+	Advisor: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
      </td></tr></tbody></table>
 
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Postdoc Research Fellow</span>, National University of Singapore, February 2019 - Present   <br>
-			Advisior: <a href="https://www.chuatatseng.com/" target="_blank">Prof. Chua Tat-Seng</a> (<a href="http://www.nextcenter.org/">NExT++: NUS-Tsinghua-Southampton Extreme Search Center</a>)
+    <td> <span class="title">Research Assistant</span>, Shandong University, October 2017 - Present   <br>
+			Advisior: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
 
-<table>
-  <tbody><tr>
-    <td> <span class="title">Research Intern</span>, Institute of Automation, Chinese Academy of Sciences, June 2013 - February 2014   <br>
-			Advisior: <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html" target="_blank">Prof. Xu Changsheng</a> and <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/qfang/index.html" target="_blank">Dr. Fang Quan</a> (<a href="http://www.nlpr.ia.ac.cn/cn/index.html">National Lab of Pattern Recognition</a>)
-		</td></tr></tbody>
-</table>
+
 
 <!-- =======================================================================!-->
 
 <div id="papers">
-<h2 style="CLEAR: both">First-Author Publications <a href="https://scholar.google.com.sg/citations?user=HdhaQB0AAAAJ&hl=en" target="_blank">Google Scholar</a></h2> 
+<h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
 <b> In the Year of 2019: </b> </br></br>
@@ -146,11 +119,11 @@ Multi-modal Data Analysis" </font> </br>
   <tbody>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/1905.07854" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">KGAT: Knowledge Graph Attention Network for Recommendation</span> 
-      <br><b>Yongqi Li</b>, Xiangnan He, Yixin Cao, Meng Liu & Tat-Seng Chua
-    <br>KDD 2019 (Full, Accept rate: 14.2%)
-    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/knowledge_graph_attention_network" target="_blank">Codes</a> &nbsp;&nbsp;
-                    &bull; Slides &nbsp;&nbsp;
+    <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
+      <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
+    <br>ACM MM 2019 (Full)
+<!--    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/knowledge_graph_attention_network" target="_blank">Codes</a> &nbsp;&nbsp;
+                    &bull; Slides &nbsp;&nbsp;-->
   </td>
   </tr>
  </tbody>
@@ -160,9 +133,9 @@ Multi-modal Data Analysis" </font> </br>
 </table>
 
 
-
+<!--
 <b> Look for the full publication list? Please see <a href="files/xiangwang_cv.pdf" target="_blank">my CV</a> or visit <a href="https://scholar.google.com.sg/citations?user=HdhaQB0AAAAJ&hl=en" target="_blank">Google Scholar</a>.</b></br></br>
-
+-->
 
 <!-- <h2 style="CLEAR: both;">Tutorials</h2>
 
@@ -181,14 +154,39 @@ Multi-modal Data Analysis" </font> </br>
 <h2 style="CLEAR: both;">Honors</h2>
 
 <table><tbody><tr><td>
-  <span class="title">Dean’s Graduate Research Excellence Award, &nbsp;&nbsp;June 2018</span> &nbsp;&nbsp; 
-  <br> - School of Computing, National University of Singapore
+  <span class="title">Second Prize, 2017 Intel Cup National Collegiate Software Innovation Contest</span><br><br>
+
+  <span class="title">First Prize, Qilu software competition</span><br><br>
+
+  <span class="title">Third Prize, National Collegiate digital media technology works competition</span><br><br>
+
+  <span class="title">Second Prize, China Undergraduate Mathematical Contest in Modeling</span><br><br>
+
+  <span class="title">Mathematical Contest in Modeling Honourable Mention</span><br><br>
+
+  <span class="title">National Encouragement Scholarship</span><br><br>
+
+  <span class="title">The second scholarship</span><br> <br>
 </td></tr></tbody></table>
 
 
 
 
+<h2 style="CLEAR: both;">Patent</h2>
 
+<table><tbody><tr><td>
+  <span class="title">Learning to Score Diving Sports</span> &nbsp;&nbsp; 
+  <br> - Yongqi Li, Cunxiao Du and Liqiang Nie
+</td></tr></tbody></table>
+
+<table><tbody><tr><td>
+  <span class="title">Explicit Interaction Model towards Text Classification</span> &nbsp;&nbsp;
+  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen and Yongqi Li
+
+</td></tr></tbody></table>
+
+
+<!--
 <h2 style="CLEAR: both;">Invited Talks</h2>
 
 <table><tbody><tr><td>
@@ -196,16 +194,13 @@ Multi-modal Data Analysis" </font> </br>
   <br> - Shandong University, Augest 11, 2018 (invited by Prof. Nie Liqiang)
 </td></tr></tbody></table>
 
-
-
-
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-<!-- 	Local Chair of <span class="title">CCIS 2019</span> (IEEE International Conference on Cloud Computing and Intelligence Systems) <br> -->
+	Local Chair of <span class="title">CCIS 2019</span> (IEEE International Conference on Cloud Computing and Intelligence Systems) <br> 
   Program Committee Member of <span class="title">ACM SIGIR (2019) </span> <br>
 
 </td></tr></tbody></table>
-
+-->
 
 <!-- <h2 style="CLEAR: both;">Datasets</h2>
 <table>
@@ -236,20 +231,8 @@ Multi-modal Data Analysis" </font> </br>
 	2013/2014 Semester 1
      </td></tr></tbody></table>
 -->
-		
-<h2 style="CLEAR: both;">Useful Links</h2>
-<table><tbody>
-  <tr><td> <span class="title"><a href="./SoC Conference Ranking.htm" target="_blank">NUS CS Conference Rankings</a></span> </td></tr>
-  <tr><td> <span class="title"><a href="./SoC Journal Ranking.htm" target="_blank">NUS CS Journal Ranking</a></span> </td></tr>  
-  <tr><td> <span class="title"><a href="http://www.comp.nus.edu.sg/undergraduates/useful_course_schedule.html" target="_blank">NUS CS Courses</a></span> </td></tr>    
-  <tr><td> <span class="title"><a href="https://docs.google.com/document/d/1IXF3h0RU5zz4ukmTrVKVotPQypChscNGf5k6E25HGvA" target="_blank">Machine Learning Reading List</a></span> </td></tr>    
-  <tr><td> <span class="title"><a href="https://github.com/robertsdionne/neural-network-papers" target="_blank">Deep Learning Reading List</a></span> </td></tr>    
-</tbody></table>
-
-</br>
-<!-- <div id="clustrmaps-widget"></div> <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=BMZwy5vgkXtV6P19neLzpJ23Mpj_2dIdhe9EE5_5V0I"></script> -->
-
-<p>Last update: May 1, 2019. Webpage template borrows from <a href="https://www.comp.nus.edu.sg/~xiangnan/">Xiangnan He</a>.</p>
+</br>		
+<p>Last update: July 24, 2019 </a>.</p>
 
 </div>
 </div>
