--- a/index.html
+++ b/index.html
@@ -169,7 +169,20 @@ Multi-modal Data Analysis" </font> </br>
   <span class="title">The second scholarship</span><br> <br>
 </td></tr></tbody></table>
 
+<h2 style="CLEAR: both;">Projects</h2>
 
+<table><tbody><tr><td>
+  <span class="title">Learning to Score Diving Sports</span> &nbsp;&nbsp; 
+  <br> - Second Prize, 2017 Intel Cup National Collegiate Software Innovation Contest
+  <br> - <a href="https://github.com/liyongqi67/DiveScore" target="_blank">Codes</a> 
+</td></tr></tbody></table>
+
+<table><tbody><tr><td>
+  <span class="title">Smart Medical Kit </span> &nbsp;&nbsp; 
+  <br> - First Prize, Qilu software competition 
+  <br> - Third Prize, National Collegiate digital media technology works competition
+  <br> - <a href="https://github.com/liyongqi67/SmartMedicalKit" target="_blank">Codes</a> 
+</td></tr></tbody></table>
 
 
 <h2 style="CLEAR: both;">Patent</h2>
