--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://arxiv.org/abs/1905.07854" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
       <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
     <br>ACM MM 2019 (Full)
