--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Recommendation System</b>.
 </p><p style="margin-left:0px;">
 <b>Research Assistant</b>
 </p><p style="margin-left:0px;">
-<a href="http://www.cs.sdu.edu.cn/", target="_blank">Computer science and technology</a><br/>
+<a href="http://www.cs.sdu.edu.cn/", target="_blank">School of Computer Science and Technology</a><br/>
 <a href="http://www.sdu.edu.cn/", target="_blank">Shandong University</a><br/>
 </p><p style="margin-left:0px;">
 72 Binhai Ave, Qingdao, Shandong, China 266237<br>
