--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
     <b>1 July 2019</b><br>
     <span class="easylink">
-    One full paper is accepted by <a href="https://www.kdd.org/kdd2019/" target="_blank">ACM MM 2019</a>, about <b>Routing Micro-videos via A Temporal Graph-guided
-Recommendation System</b>. 
+    One full paper is accepted by <a href="https://www.acmmm.org/2019/" target="_blank">ACM MM 2019</a>, about <b>micro-video recommendation</b>. 
     </span><br><br>
 
 
