--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <b>1 July 2019</b><br>
     <span class="easylink">
-    One full paper is accepted by <a href="https://www.acmmm.org/2019/" target="_blank">ACM MM 2019</a>, about <b>micro-video recommendation</b>. 
+    Our full paper <b>"Routing Micro-videos via A Temporal Graph-guided Recommendation System"</b> is accepted by <a href="https://www.acmmm.org/2019/" target="_blank">ACM MM 2019</a>.
     </span><br><br>
 
 
