--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 72 Binhai Ave, Qingdao, Shandong, China 266237<br>
 </p><p style="margin-left:0px;">
 liyongqi0@gmail.com</a><br>
-&bull; <a href="files/CV_liyongqi.pdf">CV</a> &bull; <a href="https://github.com/liyongqi67">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
+&bull; <a href="files/CV_liyongqi0.pdf">CV</a> &bull; <a href="https://github.com/liyongqi67">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
 </p></font><p><font size="+0">
 </font>
 </p></td>
