--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Multi-modal Data Analysis" </font> </br>
 
 -->
 </br>		
-<p>Last update: July 24, 2019 </a>.</p>
+<p>Last update: September 1, 2019. Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
 
 </div>
 </div>
