--- a/index.html
+++ b/index.html
@@ -6,19 +6,7 @@
 <meta name="keywords" content="Yongqi Li">
 
 <link rel="stylesheet" type="text/css" href="./files/liyongqi.css">
-<!-- <script type="text/javascript" async="" src="./files/ga.js"></script><script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-39532305-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script> -->
 
 <style>@-moz-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-webkit-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-o-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}embed,object{animation-duration:.001s;-ms-animation-duration:.001s;-moz-animation-duration:.001s;-webkit-animation-duration:.001s;-o-animation-duration:.001s;animation-name:nodeInserted;-ms-animation-name:nodeInserted;-moz-animation-name:nodeInserted;-webkit-animation-name:nodeInserted;-o-animation-name:nodeInserted;}</style></head>
 
@@ -61,7 +49,7 @@
 72 Binhai Ave, Qingdao, Shandong, China 266237<br>
 </p><p style="margin-left:0px;">
 liyongqi0@gmail.com</a><br>
-&bull; <a href="files/CV_liyongqi0.pdf">CV</a> &bull; <a href="https://github.com/liyongqi67">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
+<!--&bull; <a href="files/CV_liyongqi0.pdf">CV</a>!--> &bull; <a href="https://github.com/liyongqi67">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
 </p></font><p><font size="+0">
 </font>
 </p></td>
@@ -121,8 +109,8 @@ Multi-modal Data Analysis" </font> </br>
     <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
       <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
     <br>ACM MM 2019 (Full)
-<!--    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/xiangwang1223/knowledge_graph_attention_network" target="_blank">Codes</a> &nbsp;&nbsp;
-                    &bull; Slides &nbsp;&nbsp;-->
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/ALPINE" target="_blank">Codes</a> &nbsp;&nbsp;
+                    &bull; Slides(Coming soon) &nbsp;&nbsp;
   </td>
   </tr>
  </tbody>
