--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="papers/MM2019_Routing_Micro_videos_via_A_Temporal_Graph_guided_Recommendation_System.pdf" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
       <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
     <br>ACM MM 2019 (Full)
