--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ include information retrieval and data mining.
 </table>
 
 
-</table>
+
 
 
 <!--
@@ -202,13 +202,15 @@ include information retrieval and data mining.
 </td></tr></tbody></table>
 -->
 
-<!-- <h2 style="CLEAR: both;">Datasets</h2>
+<!-- 
+<h2 style="CLEAR: both;">Datasets</h2>
 <table>
   <tbody>
   <tr>
     <td><span class="title"><a href="http://wing.comp.nus.edu.sg/downloads/multiview_clustering/" target="_blank">Multi-View Clustering with User Comments</a></span> <br>
 	  The first public user comments dataset for multi-view clustering. The groundtruth labels are provided as the categories of items. The textual comments have been pre-processed, include stemming, removing stopwords .etc.<br>
-	  <a href="http://dl.acm.org/citation.cfm?id=2567975">WWW 2014 paper</a>.</td></tr></tbody></table> -->
+	  <a href="http://dl.acm.org/citation.cfm?id=2567975">WWW 2014 paper</a>.</td></tr></tbody></table> 
+-->
 
 <!--
 <h2 style="CLEAR: both;">Teaching Assistants</h2>
@@ -224,8 +226,8 @@ include information retrieval and data mining.
     <td><span class="title"><a href="http://www.comp.nus.edu.sg/~kanmy/courses/3245_2014/" target="_blank">CS3245 Information Retrieval</a></span> <br>
 	2013/2014 Semester 2 
      </td></tr></tbody></table>
-
 -->
+
 </br>		
 <p>Last update: September 1, 2019. Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
 
