--- a/index.html
+++ b/index.html
@@ -110,29 +110,14 @@ include information retrieval and data mining.
   </tr>
  </tbody>
 </table>
-
-
-
-
-
 <!--
 <b> Look for the full publication list? Please see <a href="files/xiangwang_cv.pdf" target="_blank">my CV</a> or visit <a href="https://scholar.google.com.sg/citations?user=HdhaQB0AAAAJ&hl=en" target="_blank">Google Scholar</a>.</b></br></br>
 -->
+<!-- ============================Papers===========================================!-->
 
-<!-- <h2 style="CLEAR: both;">Tutorials</h2>
 
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="./papers/sigir18-tutorial-deep-matching.pdf" target="_blank"><img src="./files/pdf.gif"><br>pdf</a></td>
-    <td><span class="title">Deep Learning for Matching in Search and Recommendation</span> 
-      <br>Jun Xu, <b>Xiangnan He</b>, & Hang Li
-    <br> SIGIR 2018 &nbsp;&nbsp; <a href="./sigir18-deep.pdf" target="_blank">Slides</a> (2018/7/8 @ Ann Arbor Michigan, US) &nbsp;&nbsp; 
-  </td>
-  </tr>
- </tbody>
-</table> -->
 
+<!-- ============================Projects===========================================!-->
 <h2 style="CLEAR: both;">Projects</h2>
 
 <table><tbody><tr><td>
@@ -147,8 +132,10 @@ include information retrieval and data mining.
   <br> - Third Prize, National Collegiate digital media technology works competition
   <br> - <a href="https://github.com/liyongqi67/SmartMedicalKit" target="_blank">Codes</a> 
 </td></tr></tbody></table>
+<!-- ============================Projects===========================================!-->
 
 
+<!-- ============================Patent===========================================!-->
 <h2 style="CLEAR: both;">Patent</h2>
 
 <table><tbody><tr><td>
@@ -160,10 +147,10 @@ include information retrieval and data mining.
   <span class="title">Explicit Interaction Model towards Text Classification</span> &nbsp;&nbsp;
   <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen and Yongqi Li
 </td></tr></tbody></table>
+<!-- ============================Patent===========================================!-->
 
 
-
-
+<!-- ============================Honors===========================================!-->
 <h2 style="CLEAR: both;">Honors</h2>
 
 <table><tbody><tr><td>
@@ -181,11 +168,11 @@ include information retrieval and data mining.
 
   <span class="title">The second scholarship</span><br> <br>
 </td></tr></tbody></table>
+<!-- ============================Honors===========================================!-->
 
 
 
-
-
+<!-- ============================Invited Talks===========================================!-->
 <!--
 <h2 style="CLEAR: both;">Invited Talks</h2>
 
@@ -201,7 +188,10 @@ include information retrieval and data mining.
 
 </td></tr></tbody></table>
 -->
+<!-- ============================Invited Talks===========================================!-->
 
+
+<!-- ============================Datasets===========================================!-->
 <!-- 
 <h2 style="CLEAR: both;">Datasets</h2>
 <table>
@@ -211,7 +201,9 @@ include information retrieval and data mining.
 	  The first public user comments dataset for multi-view clustering. The groundtruth labels are provided as the categories of items. The textual comments have been pre-processed, include stemming, removing stopwords .etc.<br>
 	  <a href="http://dl.acm.org/citation.cfm?id=2567975">WWW 2014 paper</a>.</td></tr></tbody></table> 
 -->
+<!-- ============================Datasets===========================================!-->
 
+<!-- ============================Teaching Assistants===========================================!-->
 <!--
 <h2 style="CLEAR: both;">Teaching Assistants</h2>
 <table>
@@ -227,6 +219,7 @@ include information retrieval and data mining.
 	2013/2014 Semester 2 
      </td></tr></tbody></table>
 -->
+<!-- ============================Teaching Assistants===========================================!-->
 
 </br>		
 <p>Last update: September 1, 2019. Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
