--- a/index.html
+++ b/index.html
@@ -137,16 +137,21 @@ include information retrieval and data mining.
 
 <!-- ============================Patent===========================================!-->
 <h2 style="CLEAR: both;">Patent</h2>
-
 <table><tbody><tr><td>
-  <span class="title">Learning to Score Diving Sports</span> &nbsp;&nbsp; 
-  <br> - Yongqi Li, Cunxiao Du and Liqiang Nie
+  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> &nbsp;&nbsp;
+  <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
 </td></tr></tbody></table>
 
 <table><tbody><tr><td>
   <span class="title">Explicit Interaction Model towards Text Classification</span> &nbsp;&nbsp;
-  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen and Yongqi Li
+  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
+
+<table><tbody><tr><td>
+  <span class="title">Learning to Score Diving Sports</span> &nbsp;&nbsp; 
+  <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
+</td></tr></tbody></table>
+
 <!-- ============================Patent===========================================!-->
 
 
