--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@ include information retrieval and data mining.
 
 <!-- ============================Projects===========================================!-->
 <h2 style="CLEAR: both;">Projects</h2>
+<table><tbody><tr><td>
+  <span class="title">Chinese Idiom Reading Comprehension Contest</span> &nbsp;&nbsp; 
+  <br> - Rank 25/157
+  <br> - <a href="https://github.com/liyongqi67/ChID" target="_blank">Codes</a> 
+</td></tr></tbody></table>
 
 <table><tbody><tr><td>
   <span class="title">Learning to Score Diving Sports</span> &nbsp;&nbsp; 
