--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is an undergraduate student in the
-School of Computer Science and Technology,
-Shandong University. His research interests
-include information retrieval and data mining.    
+Yongqi Li is now a research assistant in ILEARN, School of Computer Science and Technology, Shandong University. 
+He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
+His research interests include information retrieval and data mining.    
 </div>
 <!-- ============================Profiles===========================================!-->
 
