--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ liyongqi0@gmail.com</a><br>
 <div style="margin-top:20px;">
 Yongqi Li is now a research assistant in School of Computer Science and Technology, Shandong University. 
 He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
-His research interests include information retrieval and data mining.    
+His research interests include information retrieval and text mining.    
 </div>
 <!-- ============================Profiles===========================================!-->
 
