--- a/index.html
+++ b/index.html
@@ -179,8 +179,31 @@ His research interests include information retrieval and text mining.
 </td></tr></tbody></table>
 <!-- ============================Honors===========================================!-->
 
-
-
+<!-- ============================Map===========================================!-->
+    <!-- start Mixpanel -->
+    <script type="text/javascript">
+    (function(d, c) {
+        var a, b, g, e;
+        a = d.createElement("script");
+        a.type = "text/javascript";
+        a.async = !0;
+        a.src = ("https:" === d.location.protocol ? "https:" : "http:") + '//api.mixpanel.com/site_media/js/api/mixpanel.2.js';
+        b = d.getElementsByTagName("script")[0];
+        b.parentNode.insertBefore(a, b);
+        c._i = [];
+        c.init = function(a, d, f) {
+            var b = c;
+            "undefined" !== typeof f ? b = c[f] = [] : f = "mixpanel";
+            g = "disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
+            for (e = 0; e < g.length; e++)(function(a) { b[a] = function() { b.push([a].concat(Array.prototype.slice.call(arguments, 0))) } })(g[e]);
+            c._i.push([a, d, f])
+        };
+        window.mixpanel = c
+    })(document, []);
+    mixpanel.init("f53c1fec477e7648ce5f936703d9cdf0");
+    </script>
+    <!-- end Mixpanel -->
+<!-- ============================Map===========================================!-->
 <!-- ============================Invited Talks===========================================!-->
 <!--
 <h2 style="CLEAR: both;">Invited Talks</h2>
