--- a/index.html
+++ b/index.html
@@ -181,27 +181,8 @@ His research interests include information retrieval and text mining.
 
 <!-- ============================Map===========================================!-->
     <!-- start Mixpanel -->
-    <script type="text/javascript">
-    (function(d, c) {
-        var a, b, g, e;
-        a = d.createElement("script");
-        a.type = "text/javascript";
-        a.async = !0;
-        a.src = ("https:" === d.location.protocol ? "https:" : "http:") + '//api.mixpanel.com/site_media/js/api/mixpanel.2.js';
-        b = d.getElementsByTagName("script")[0];
-        b.parentNode.insertBefore(a, b);
-        c._i = [];
-        c.init = function(a, d, f) {
-            var b = c;
-            "undefined" !== typeof f ? b = c[f] = [] : f = "mixpanel";
-            g = "disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-            for (e = 0; e < g.length; e++)(function(a) { b[a] = function() { b.push([a].concat(Array.prototype.slice.call(arguments, 0))) } })(g[e]);
-            c._i.push([a, d, f])
-        };
-        window.mixpanel = c
-    })(document, []);
-    mixpanel.init("f53c1fec477e7648ce5f936703d9cdf0");
-    </script>
+<div class="sidebaritem">
+                    <a style="padding-left:0px;" href="https://clustrmaps.com/site/pjgu"><img style="border:0px; width:100%;" src="//clustrmaps.com/map_v2.png?cl=ffffff&w=150&t=tt&d=d-ELQGkIrTCQRRtly6woZicODts2c7CQlPLb84WBdEE"/></a>
     <!-- end Mixpanel -->
 <!-- ============================Map===========================================!-->
 <!-- ============================Invited Talks===========================================!-->
