--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ His research interests include information retrieval and text mining.
 <!-- ============================Map===========================================!-->
     <!-- start Mixpanel -->
 <div class="sidebaritem">
-                    <a style="padding-left:0px;" href="https://clustrmaps.com/site/pjgu"><img style="border:0px; width:100%;" src="//clustrmaps.com/map_v2.png?cl=ffffff&w=150&t=tt&d=d-ELQGkIrTCQRRtly6woZicODts2c7CQlPLb84WBdEE"/></a>
+                    <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=P5t3EabrzZY8aFh3ZhuRPAXXUh7jCpV3TVHKUlqbMjA"></script>
     <!-- end Mixpanel -->
 <!-- ============================Map===========================================!-->
 <!-- ============================Invited Talks===========================================!-->
