--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     </font>
 </div>
 <!-- ============================NEWS===========================================!-->
-	
+<!-- ============================NEWS===========================================!-->
+<div id="news">
+    <h2></h2><br>
+	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=P5t3EabrzZY8aFh3ZhuRPAXXUh7jCpV3TVHKUlqbMjA"></script>
+</div>
+<!-- ============================NEWS===========================================!-->	
 
 <!-- ============================Profiles===========================================!-->
 <div id="left">
