--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
     </font>
 </div>
 <!-- ============================NEWS===========================================!-->
-<!-- ============================NEWS===========================================!-->
-<div id="news">
-    <h2></h2><br>
-	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=P5t3EabrzZY8aFh3ZhuRPAXXUh7jCpV3TVHKUlqbMjA"></script>
-</div>
-<!-- ============================NEWS===========================================!-->	
+
 
 <!-- ============================Profiles===========================================!-->
 <div id="left">
@@ -183,8 +178,10 @@ His research interests include information retrieval and text mining.
   <span class="title">The second scholarship</span><br> <br>
 </td></tr></tbody></table>
 <!-- ============================Honors===========================================!-->
-
-
+<!-- ============================Map===========================================!-->
+<h2 style="CLEAR: both;"></h2>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=300&t=tt&d=P5t3EabrzZY8aFh3ZhuRPAXXUh7jCpV3TVHKUlqbMjA&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
+<!-- ============================Map===========================================!-->
 <!-- ============================Invited Talks===========================================!-->
 <!--
 <h2 style="CLEAR: both;">Invited Talks</h2>
