--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+    <b>8 Oct 2019</b><br>
+    <span class="easylink">
+    I will be a PHD student in the department of Computing, Polyu, in Jan 2020.
+    </span><br><br>
     <b>1 July 2019</b><br>
     <span class="easylink">
     Our full paper <b>"Routing Micro-videos via A Temporal Graph-guided Recommendation System"</b> is accepted by <a href="https://www.acmmm.org/2019/" target="_blank">ACM MM 2019</a>.
@@ -231,7 +235,7 @@ His research interests include information retrieval and text mining.
 <!-- ============================Teaching Assistants===========================================!-->
 
 </br>		
-<p>Last update: September 1, 2019. Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
+<p>Last update: Oct 8, 2019. Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
 
 </div>
 </div>
