--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <font size="3px">
     <b>8 Oct 2019</b><br>
     <span class="easylink">
-    I will be a PHD student in the department of Computing, Polyu, in Jan 2020.
+    I will be a PHD student at Computing Department of The Hong Kong Polytechnic University in Jan 2020, supervised by <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a>.
     </span><br><br>
     <b>1 July 2019</b><br>
     <span class="easylink">
