--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ His research interests include information retrieval and text mining.
     <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
       <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
     <br>ACM MM 2019 (Full)
-   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/ALPINE" target="_blank">Codes</a> &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/ALPINE" target="_blank">Codes&Data</a> &nbsp;&nbsp;
                     &bull; Slides(Coming soon) &nbsp;&nbsp;
   </td>
   </tr>
