--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@ His research interests include information retrieval and text mining.
 <!-- ============================Patent===========================================!-->
 <h2 style="CLEAR: both;">Patent</h2>
 <table><tbody><tr><td>
-  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> &nbsp;&nbsp;
+  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System (applying)</span> &nbsp;&nbsp;
   <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
 </td></tr></tbody></table>
 
 <table><tbody><tr><td>
-  <span class="title">Explicit Interaction Model towards Text Classification</span> &nbsp;&nbsp;
+  <span class="title">Explicit Interaction Model towards Text Classification (applying)</span> &nbsp;&nbsp;
   <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
 
 <table><tbody><tr><td>
-  <span class="title">Learning to Score Diving Sports</span> &nbsp;&nbsp; 
+  <span class="title">Learning to Score Diving Sports (ZL 2018 1 1030493.8)</span> &nbsp;&nbsp; 
   <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
 
