--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ His research interests include information retrieval and text mining.
 </td></tr></tbody></table>
 
 <table><tbody><tr><td>
-  <span class="title">Learning to Score Diving Sports</span> (ZL 2018 1 1030493.8) &nbsp;&nbsp; 
+  <span class="title">Learning to Score Diving Sports</span> <br>(ZL 2018 1 1030493.8) &nbsp;&nbsp; 
   <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
 
