--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 <b><font size="+2">Yongqi Li&nbsp;</font></b>
 <p style="margin-left:0px;">
 </p><p style="margin-left:0px;">
-<b>Research Assistant</b>
+<b>PHD Student</b>
 </p><p style="margin-left:0px;">
-<a href="http://www.cs.sdu.edu.cn/", target="_blank">School of Computer Science and Technology</a><br/>
-<a href="http://www.sdu.edu.cn/", target="_blank">Shandong University</a><br/>
+<a href="http://www.cs.sdu.edu.cn/", target="_blank">Computing Department</a><br/>
+<a href="http://www.sdu.edu.cn/", target="_blank">The Hong Kong Polytechnic University</a><br/>
 </p><p style="margin-left:0px;">
-72 Binhai Ave, Qingdao, Shandong, China 266237<br>
+The Hong Kong Polytechnic University, Hung Hom, Kowloon, Hong Kong<br>
 </p><p style="margin-left:0px;">
 liyongqi0@gmail.com</a><br>
 <!--&bull; <a href="files/CV_liyongqi0.pdf">CV</a>!--> &bull; <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=JHpVycsAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
