--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 </p><p style="margin-left:0px;">
 <b>PHD Student</b>
 </p><p style="margin-left:0px;">
-<a href="http://www.cs.sdu.edu.cn/", target="_blank">Computing Department</a><br/>
-<a href="http://www.sdu.edu.cn/", target="_blank">The Hong Kong Polytechnic University</a><br/>
+<a href="https://www.comp.polyu.edu.hk/en-us/", target="_blank">Computing Department</a><br/>
+<a href="https://www.polyu.edu.hk/web/en/home/index.html", target="_blank">The Hong Kong Polytechnic University</a><br/>
 </p><p style="margin-left:0px;">
-The Hong Kong Polytechnic University, Hung Hom, Kowloon, Hong Kong<br>
+The Hong Kong Polytechnic University, Hong Kong<br>
 </p><p style="margin-left:0px;">
 liyongqi0@gmail.com</a><br>
 <!--&bull; <a href="files/CV_liyongqi0.pdf">CV</a>!--> &bull; <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=JHpVycsAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
@@ -68,7 +68,7 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is now a research assistant in School of Computer Science and Technology, Shandong University. 
+Yongqi Li is now a PHD student at Computing Department of The Hong Kong Polytechnic University. 
 He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
 His research interests include information retrieval and text mining.    
 </div>
