--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@ His research interests include information retrieval and text mining.
 
 <!-- ============================Education===========================================!-->
 <h2 style="CLEAR: both;">Education</h2>
+<table>
+  <tbody>
+  <tr>
+    <td><span class="title">The Hong Kong Polytechnic University </span> <br>
+	Bachelor in Computer Science and Technology &nbsp;&nbsp;&nbsp;&nbsp;  Sep 2015 - June 2019 <br>
+	Advisor: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+     </td></tr></tbody></table>
 
 <table>
   <tbody>
